--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,21 +4,83 @@
     padding: 0;
     font-family: "Open Sans", sans-serif;
 }
+/* shared style */
+.text-primary{
+    color: #FD6E0A;
+}
+.dark-1{
+    color: #181818;
+}
+.dark-2{
+    color: #474747;
+}
+.dark-3{
+    color: #757575;
+}
+.btn-primary{
+    background-color: #FD6E0A;
+    font-weight: bold;
+    color: #ffff;
+    padding: 18px 35px;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+}
 /* Nav styles */
+.header{
+    background-image: url("../images/developer.png"), url("../images/header_bg.png");
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
+}
 nav{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0px 230px;
 }
 .nav-title{
     font-weight: 800;
     font-size: 45px;
 }
-.text-primary{
-    color: #FD6E0A;
-}
-nav > ul{
+nav  ul{
     display: flex;
-    list-style: none;
+    align-items: center;
 }
-nav > ul > li > a{
+nav  ul li{
+    list-style: none;
+    margin-right: 51px;
+
+}
+nav  ul  li  a{
     text-decoration: none;
+    font-size: 20px;
+    color: #474747;
+}
+
+/* banner styles */
+.banner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 38px 0 230px;
+}
+.banner-content{
+    width: 585px;
+}
+.banner-greetings{
+    font-weight: 600;
+    font-size: 45px;
+    margin-bottom: 5px;
+}
+.banner-title{
+    font-weight: bold;
+    font-size: 85px;
+    margin-bottom: 20px;
+}
+.banner-description{
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+.banner-profile-pic{
+    width: 584px;
 }
