--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,9 @@
     font-family: "Open Sans", sans-serif;
 }
 /* shared style */
+.secondary-bg{
+    background-color: #FFF8F3;
+}
 .text-primary{
     color: #FD6E0A;
 }
@@ -26,6 +29,17 @@
     border-radius: 5px;
     font-size: 20px;
 }
+.section-title{
+    margin-bottom: 30px;
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
+    line-height: 30px;
+}
 /* Nav styles */
 .header{
     background-image: url("../images/developer.png"), url("../images/header_bg.png");
@@ -37,6 +51,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     margin: 0px 230px;
+    padding: 50px;
 }
 .nav-title{
     font-weight: 800;
@@ -81,6 +96,40 @@ nav  ul  li  a{
     font-size: 18px;
     margin-bottom: 30px;
 }
+.contact-btn{
+    background: transparent;
+    color: #FD6E0A;
+    border: 1px solid #FD6E0A;
+    margin-left: 30px;
+}
 .banner-profile-pic{
-    width: 584px;
+    width: 580px;
+}
+
+/* main styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* about styles */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+}
+.about-info{
+    display: flex;
+    margin-top: 30px;
+    justify-content: space-around;
+}
+.item-title{
+    font-size: 18px;
+    color: #757575;
+}
+.item-description{
+    font-size: 20px;
+    font-weight: bold;
+    color: #474747;
 }
