--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,6 +40,9 @@
     color: #757575;
     line-height: 30px;
 }
+.text-alignment{
+    text-align: center;
+}
 /* Nav styles */
 .header{
     background-image: url("../images/developer.png"), url("../images/header_bg.png");
@@ -50,7 +53,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0px 230px;
+    margin: 0px 200px;
     padding: 50px;
 }
 .nav-title{
@@ -111,13 +114,15 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
-
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
 /* about styles */
 .about{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
 }
 .about-info{
     display: flex;
@@ -132,4 +137,37 @@ main{
     font-size: 20px;
     font-weight: bold;
     color: #474747;
+}
+
+/* skill styles */
+.skill-description-position{
+    display: flex;
+    justify-content: center;
+}
+.skill-description{
+    width: 909px;
+}
+.skill-container{
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-around;
+    gap: 24px;
+}
+.skill-item{
+    width: 267px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0 rgba(0, 0, 0, 0.06);
+    padding: 30px;
+}
+.skill-item-title{
+    font-size: 20px;
+    font-weight: bold;
+    color: #474747;
+    margin-top: 30px;
+}
+.skill-item-description{
+    font-size: 16px;
+    color: #757575;
+    line-height: 30px;
+    margin-top: 20px;
 }
